fixes bug 334523 "[branch only] deadlock in nsObserverList::RemoveObserver" r=bsmedberg a=dveditz